--- a/platform/crossplane/compositions/github-repo-config.yaml
+++ b/platform/crossplane/compositions/github-repo-config.yaml
@@ -258,9 +258,19 @@ spec:
           toFieldPath: spec.forProvider
           policy:
             fromFieldPath: Optional
-        # Override review count from environment config
+        # Set the required approving review count.
+        # The order of precedence is:
+        # 1. From the claim (`spec.branchProtection.requiredApprovingReviewCount`)
+        # 2. From the team's environment config (`data.requiredApprovingReviewCount`)
+        # 3. The default value in the 'base' template.
+        # Patches are applied sequentially, so the last one to find a value wins.
         - type: FromEnvironmentFieldPath
           fromFieldPath: requiredApprovingReviewCount
+          toFieldPath: spec.forProvider.rules[1].pullRequest[0].requiredApprovingReviewCount
+          policy:
+            fromFieldPath: Optional
+        - type: FromCompositeFieldPath
+          fromFieldPath: spec.branchProtection.requiredApprovingReviewCount
           toFieldPath: spec.forProvider.rules[1].pullRequest[0].requiredApprovingReviewCount
           policy:
             fromFieldPath: Optional
