--- a/platform/crossplane/providers/github-provider.yaml
+++ b/platform/crossplane/providers/github-provider.yaml
@@ -4,3 +4,5 @@ metadata:
   name: provider-upjet-github
 spec:
   package: xpkg.upbound.io/crossplane-contrib/provider-upjet-github:v0.18.0
+  runtimeConfigRef:
+    name: github-runtime-config
