--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 .env.*
 .vscode
+.vscode/mcp.json
+
+.claude/
 
 # avoid commiting rendered manifests
 infra-setup/manifests/rendered/*
@@ -10,3 +13,4 @@ crossplane-gke-sa-key.json
 
 claude_desktop_config.json
 claude_desktop_config_mcp.json
+
