--- a/platform/crossplane/providers/github-runtime-config.yaml
+++ b/platform/crossplane/providers/github-runtime-config.yaml
@@ -1,4 +1,4 @@
-apiVersion: pkg.crossplane.io/v1
+apiVersion: pkg.crossplane.io/v1beta1
 kind: DeploymentRuntimeConfig
 metadata:
   name: github-runtime-config
