Revert "crossplane: fix environment configs and team maintainer issues"
This reverts commit 5deedbef62779723005d6fdd085f839446e7d6f5.

--- a/platform/crossplane/compositions/github-repo-config.yaml
+++ b/platform/crossplane/compositions/github-repo-config.yaml
@@ -28,8 +28,7 @@ spec:
         - type: Selector
           selector:
             matchLabels:
-            - key: team
-              value: team-charlie
+              team: "" # Will be patched from spec.teamName
 
   # Step 1: Patch and Transform function for basic resource creation
   - step: patch-and-transform
