crossplane: use direct environment config reference to avoid function crash

--- a/platform/crossplane/compositions/github-repo-config.yaml
+++ b/platform/crossplane/compositions/github-repo-config.yaml
@@ -25,11 +25,8 @@ spec:
         environmentConfigs:
         - ref:
             name: dev-environment
-        - type: Selector
-          selector:
-            matchLabels:
-            - key: team
-              value: team-charlie
+        - ref:
+            name: team-charlie-environment
 
   # Step 1: Patch and Transform function for basic resource creation
   - step: patch-and-transform
