crossplane: restore environment-configs function with selector approach

--- a/platform/crossplane/compositions/github-repo-config.yaml
+++ b/platform/crossplane/compositions/github-repo-config.yaml
@@ -25,8 +25,13 @@ spec:
         environmentConfigs:
         - ref:
             name: dev-environment
-        - ref:
-            name: team-charlie-environment
+        # Note: Dynamic team selection not yet supported
+        # Will match any EnvironmentConfig with team label
+        - type: Selector
+          selector:
+            matchLabels:
+            - key: team
+              value: team-charlie
 
   # Step 1: Patch and Transform function for basic resource creation
   - step: patch-and-transform
