--- a/ai/kagent/config/crossplane-composition-fixer.yaml
+++ b/ai/kagent/config/crossplane-composition-fixer.yaml
@@ -2,9 +2,9 @@ apiVersion: kagent.dev/v1alpha1
 kind: Agent
 metadata:
   name: crossplane-composition-fixer
-  namespace: kagent
+  namespace: kagent-system
 spec:
-  modelConfig: "claude-3-7-sonnet-20250219"
+  modelConfig: claude-model-config
   systemMessage: |
     You are a Crossplane composition debugging expert for the olga-mir/playground repository.
 
@@ -47,7 +47,7 @@ spec:
 #   config:
 #     sse:
 #       url: http://argo-app-status.kagent.svc.cluster.local/sse
-# 
+#
 # ---
 # apiVersion: kagent.dev/v1alpha1
 # kind: ToolServer
