kagent: update the toolServer in crossplane kagent

--- a/ai/kagent/config/crossplane-composition-fixer.yaml
+++ b/ai/kagent/config/crossplane-composition-fixer.yaml
@@ -33,8 +33,8 @@ spec:
   tools:
   - type: McpServer
     mcpServer:
-      toolServer: get-resources
-      toolNames: ["get-resources"]
+      toolServer: mcp-website-fetcher
+      toolNames: ["fetch"]
 
 # ---
 # apiVersion: kagent.dev/v1alpha1
