kagent: move toolserver to kagent-system

--- a/ai/kagent/config/crossplane-composition-fixer.yaml
+++ b/ai/kagent/config/crossplane-composition-fixer.yaml
@@ -64,7 +64,7 @@ apiVersion: kagent.dev/v1alpha1
 kind: ToolServer
 metadata:
   name: mcp-website-fetcher
-  namespace: kagent
+  namespace: kagent-system
 spec:
   description: "Test - website fetcher"
   config:
