github: test provider per namespace via DeploymentRuntimeConfig

--- a/platform/crossplane/providers/github-runtime-config.yaml
+++ b/platform/crossplane/providers/github-runtime-config.yaml
@@ -9,3 +9,9 @@ spec:
         deployment-runtime-config-demo: "injected-from-runtime-config"
       labels:
         manadatory-label: "mandatory-label-from-runtime-config"
+    spec:
+      template:
+        metadata:
+          namespace: crossplane-provider-upjet-github
+
+# https://doc.crds.dev/github.com/crossplane/crossplane/pkg.crossplane.io/DeploymentRuntimeConfig/v1beta1@v2.0.0-preview.1#spec-deploymentTemplate-spec-template-metadata-namespace
