--- a/tasks/setup.yaml
+++ b/tasks/setup.yaml
@@ -9,7 +9,7 @@ tasks:
       - sleep 240
       - "{{.TASKFILE_DIR}}/infra-setup/03-w-deploy-gke-clusters-wait.sh"
       - "{{.TASKFILE_DIR}}/infra-setup/04-setup-gke-clusters.sh"
-      - kubectl create namespace crossplane-provider-upjet-github
+      - sleep 100
       - "{{.TASKFILE_DIR}}/infra-setup/98-argocd-gateway-api.sh"
 
   full-cleanup:
